--- a/com.eclipsesource.widgets.ckeditor/src/resources/skins/kama/editor.css
+++ b/com.eclipsesource.widgets.ckeditor/src/resources/skins/kama/editor.css
@@ -67,7 +67,7 @@ span.cke_skin_kama {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-  border: 1px solid tranparent;
+  border: 1px solid transparent;
   padding: 0px;
 }
 
