--- a/src/main/resources/resources/contents.css
+++ b/src/main/resources/resources/contents.css
@@ -17,6 +17,11 @@ body.cke_editable
 	margin-left: 20px;
 }
 
+body.cke_editable.din-a4
+{
+    width: 172mm;
+}
+
 .cke_editable
 {
 	font-size: 13px;
