--- a/src/main/resources/resources/contents.css
+++ b/src/main/resources/resources/contents.css
@@ -5,12 +5,8 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 
 body.cke_editable
 {
-	/* CoBa Standard */
-	font-family: Arial;
-	font-size: 9.5pt;
-	margin-top: 0pt; 
-	margin-bottom: 0pt; 
-	line-height: 14pt; 
+	/* Font */
+	font-family: Arial, Verdana, "Trebuchet MS", sans-serif;
 
 	/* Text color */
 	color: #333;
@@ -22,30 +18,8 @@ body.cke_editable
 
 .cke_editable
 {
-	font-size: 9.5pt;
-	line-height: 14pt;
-}
-
-p
-{
-	line-height: 14pt;
-	margin-top: 0pt; 
-	margin-bottom: 0pt; 
-}
-
-span
-{
-	font-family: Arial;
-	font-size: 9.5pt;
-}
-
-table
-{
-	margin-top: 0pt;
-	margin-bottom: 0pt;
-	line-height: 14pt;
-	font-family: Arial;
-	font-size: 9.5pt;
+	font-size: 10pt;
+	line-height: 1.6em;
 }
 
 blockquote
@@ -122,6 +96,11 @@ pre
 .marker
 {
 	background-color: Yellow;
+}
+
+span[lang]
+{
+   font-style: italic;
 }
 
 .ckeditor-locked {
